# MonopolyAI

./: CMakeLists.txt  README.md  temp_genome_35.pkl  temp_genome_36.pkl  temp_genome_41.pkl  temp_genome_44.pkl
agents/: CMakeLists.txt  greedy_agent.c  neat_agent.py  neat_bridge.c  neat_config.txt  neat_training.py  random_agent.c
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  monopoly_engine
bulid/agents/: Makefile  cmake_install.cmake  libgreedy_agent.dylib  libneat_bridge.dylib  librandom_agent.dylib
checkpoints/: neat-checkpoint-14  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-49  neat-checkpoint-9
genomes/: best_genome.pkl
include/: agent_abi.h  state_view.h
past_training_results/: neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44
src/engine/: agent_adapter.cpp  agent_adapter.h  board.cpp  board.hpp  engine.cpp  engine.h  engine_cards.cpp  engine_core.cpp  engine_finance.cpp  engine_init.cpp  engine_property.cpp  engine_rent.cpp  engine_trade.cpp  plugin_loader.cpp  plugin_loader.h  wrapper.cpp
